--- a/presentations/slides/au2019.html
+++ b/presentations/slides/au2019.html
@@ -2,15 +2,16 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+        <title>reveal-md</title>
+        <link rel="stylesheet" href="css/reveal.css">
+        <link rel="stylesheet" href="css/theme/black.css" id="theme">
+        <!-- For syntax highlighting -->
+        <link rel="stylesheet" href="lib/css/zenburn.css">
 
-        <title></title>
-        <link rel="stylesheet" href="/css/reveal.css">
-        <link rel="stylesheet" href="/css/theme/black.css" id="theme">
-        <link rel="stylesheet" href="/css/highlight/zenburn.css">
-        <link rel="stylesheet" href="/css/print/paper.css" type="text/css" media="print">
-
-
+        <!-- If the query includes 'print-pdf', use the PDF print sheet -->
+        <script>
+          document.write( '<link rel="stylesheet" href="css/print/' + ( window.location.search.match( /print-pdf/gi ) ? 'pdf' : 'paper' ) + '.css" type="text/css" media="print">' );
+        </script>
     </head>
     <body>
 
@@ -130,7 +131,8 @@ link/to/image.jpg?pas=20312538471902072133
     * Are these records on the public web?
 * Web Archives are extremely limited for this type of collecting
 * Broader questions about collecting and power
-    </script></section><section  data-markdown><script type="text/template">
+    
+</script></section><section  data-markdown><script type="text/template">
 ### When Web Crawling Backfires?
 <br/>
 
@@ -141,8 +143,8 @@ link/to/image.jpg?pas=20312538471902072133
 </script></section></div>
         </div>
 
-        <script src="/lib/js/head.min.js"></script>
-        <script src="/js/reveal.js"></script>
+        <script src="lib/js/head.min.js"></script>
+        <script src="js/reveal.js"></script>
 
         <script>
             function extend() {
@@ -160,13 +162,12 @@ link/to/image.jpg?pas=20312538471902072133
 
             // Optional libraries used to extend on reveal.js
             var deps = [
-              { src: '/lib/js/classList.js', condition: function() { return !document.body.classList; } },
-              { src: '/plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
-              { src: '/plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
-              { src: '/plugin/zoom-js/zoom.js', async: true },
-              { src: '/plugin/notes/notes.js', async: true },
-              { src: '/plugin/math/math.js', async: true }
+              { src: 'lib/js/classList.js', condition: function() { return !document.body.classList; } },
+              { src: 'plugin/markdown/marked.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/markdown/markdown.js', condition: function() { return !!document.querySelector('[data-markdown]'); } },
+              { src: 'plugin/highlight/highlight.js', async: true, callback: function() { hljs.initHighlightingOnLoad(); } },
+              { src: 'plugin/notes/notes.js', async: true, condition: function() { return !!document.body.classList; } },
+              { src: 'plugin/math/math.js', async: true }
             ];
 
             // default options to init reveal.js
@@ -175,20 +176,20 @@ link/to/image.jpg?pas=20312538471902072133
               progress: true,
               history: true,
               center: true,
-              transition: 'default', // none/fade/slide/convex/concave/zoom
+              transition: 'default',
               dependencies: deps
             };
 
             // options from URL query string
             var queryOptions = Reveal.getQueryHash() || {};
 
-            var options = {"transition":"fade"};
+            var options = {
+  "transition": "fade"
+};
             options = extend(defaultOptions, options, queryOptions);
-        </script>
-
-
-        <script>
             Reveal.initialize(options);
         </script>
+        
+          <script src="/scripts/slides"></script>
     </body>
 </html>
